--- a/frontend/web/css/custom.css
+++ b/frontend/web/css/custom.css
@@ -16,7 +16,7 @@
     padding: 6px 12px;
     margin-left: -1px;
     line-height: 1.42857143;
-    color: #337ab7;
+    color: #d9534f;
     text-decoration: none;
     background-color: #fff;
     border: 1px solid #ddd;
@@ -37,7 +37,7 @@
 .pagination > li > a:focus,
 .pagination > li > span:focus {
     z-index: 2;
-    color: #23527c;
+    color: #d9534f;
     background-color: #eee;
     border-color: #ddd;
 }
@@ -50,8 +50,8 @@
     z-index: 3;
     color: #fff;
     cursor: default;
-    background-color: #337ab7;
-    border-color: #337ab7;
+    background-color: #d9534f;
+    border-color: #d9534f;
 }
 .pagination > .disabled > span,
 .pagination > .disabled > span:hover,
@@ -96,3 +96,71 @@
     border-top-right-radius: 3px;
     border-bottom-right-radius: 3px;
 }
+
+.form form {
+    width: 400px;
+    margin: 0 auto;
+    padding-top: 20px;
+}
+
+.help-block {
+    display: block;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    color: #a94442;
+}
+
+
+/*
+Author: 404
+*/
+body{
+    font-family:Rubik,sans-serif;
+    margin:0;
+    overflow-x:hidden;
+    font-weight:300
+}
+#wrapper{
+    width:100%
+}
+error-box{
+    height:100%;
+    position:fixed;
+    top:20%;
+    width:100%
+}
+.error-box .footer{
+    width:100%;
+    left:0;
+    right:0
+}
+.error-body{
+    padding-top:5%
+}
+.error-body h1{
+    font-size:210px;
+    font-weight:900;
+    line-height:210px
+}
+.text-danger{
+    color:#f33155
+}
+.text-muted{
+    color:#8d9ea7
+}
+.m-b-40{
+    margin-bottom:40px!important
+}
+.m-t-30{
+    margin-top:30px!important
+}
+.m-b-30{
+    margin-bottom:30px!important
+}@media only screen and (max-width: 520px){
+    .error-body h1{
+        font-size:110px;
+        font-weight:700;
+        line-height:110px
+    }
+}
+
