--- a/frontend/web/css/theme.css
+++ b/frontend/web/css/theme.css
@@ -6291,3 +6291,60 @@ ul.list-reset {
   margin-top: -25px;
   margin-left: -25px;
 }
+
+/*
+* ==========================================================
+*     GALLERY SECTION
+* ==========================================================
+*/
+section.gallery .mix {
+  padding: 0;
+  /*max-width: 150px;*/
+  max-height: 100px;
+  overflow: hidden;
+}
+
+section.gallery a {
+  outline: none;
+  width: 100%;
+  height: 100%;
+}
+
+section.gallery a img {
+  min-height: 100%;
+  width: 100%;
+}
+
+section.gallery .item {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+section.gallery .item:hover .overlay {
+  opacity: 1;
+}
+
+section.gallery .item:hover i {
+  opacity: 1;
+  transform: none;
+}
+
+section.gallery .overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(153, 153, 153, 0.7);
+  color: #fff;
+  opacity: 0;
+  transition: all 0.5s;
+}
+
+section.gallery .overlay i {
+  transform: translateY(20px);
+  transition: all 0.5s;
+  opacity: 0;
+  font-size: 2em;
+}
