xs added to bootstrap

--- a/frontend/web/css/theme.css
+++ b/frontend/web/css/theme.css
@@ -2586,10 +2586,12 @@ input[type='submit'], button[type='button'] {
 
 .slick-arrow-style-1 .arrow-prev {
   left: 0;
+  top: 50%!important;
 }
 
 .slick-arrow-style-1 .arrow-next {
   right: 0;
+  top: 50%!important;
 }
 
 .slick-arrow-style-1 {
@@ -2648,10 +2650,12 @@ input[type='submit'], button[type='button'] {
 
 .slick-arrow-style-1 .arrow-prev {
   left: -10px;
+  top: 50%!important;
 }
 
 .slick-arrow-style-1 .arrow-next {
   right: -10px;
+  top: 50%!important;
 }
 
 .slick-arrow-style-2 {
@@ -3728,6 +3732,28 @@ ul.list-reset {
 .box-blog-sm .blog-post-time {
   font-size: 13px;
   color: #999;
+}
+/*
+========================================================================
+    BLOG SMALL
+========================================================================
+*/
+
+@media (max-width: 767px) {
+  .col-xs-4 {
+    -ms-flex: 0 0 33.333333%;
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
+    font-size: 10px;
+  }
+  .box-primary .box-title {
+    margin-top: 0;
+    margin-bottom: 10px;
+    font-family: "Poppins", sans-serif;
+    font-size: 10px;
+    color: #333;
+    font-weight: 500;
+  }
 }
 
 /*
